# compiller_course_2020

./: .gitignore  CMakeLists.txt  Program.cpp  Program.h  README.md  SetLocation.h  main.cpp  parser.y  scanner.l
BaseClass/: BaseClass.cpp  BaseClass.h
asm/: Instructions.h
asm/instructions/: AddInstruction.cpp  AddInstruction.h  AndInstruction.cpp  AndInstruction.h  AsmInstruction.cpp  AsmInstruction.h  CallInstruction.cpp  CallInstruction.h  CmpInstruction.cpp  CmpInstruction.h  ExitSysCall.cpp  ExitSysCall.h  IDivInstruction.cpp  IDivInstruction.h  IMulInstruction.cpp  IMulInstruction.h  JumpInstruction.cpp  JumpInstruction.h  LabelInstruction.cpp  LabelInstruction.h  MmapSyscall.cpp  MmapSyscall.h  MovInstruction.cpp  MovInstruction.h  OrInstruction.cpp  OrInstruction.h  PopInstruction.cpp  PopInstruction.h  PushInstruction.cpp  PushInstruction.h  RetInstruction.cpp  RetInstruction.h  SubInstruction.cpp  SubInstruction.h  WriteSyscall.cpp  WriteSyscall.h
assignments/: Assignment.h  AssignmentList.cpp  AssignmentList.h
class-layout/: ClassLayout.cpp  ClassLayout.h
class-map/: ClassMap.cpp  ClassMap.h
driver/: driver.cpp  driver.h
expressions/: AddExpression.cpp  AddExpression.h  BinaryExpression.cpp  DivExpression.cpp  DivExpression.h  EqualExpression.cpp  EqualExpression.h  Expression.h  GreaterExpression.cpp  GreaterExpression.h  GreaterOrEqualExpression.h  IdentExpression.cpp  IdentExpression.h  LessExpression.h  LessOrEqualExpression.cpp  LessOrEqualExpression.h  ModuloExpression.cpp  MulExpression.cpp  MulExpression.h  NumExpression.cpp  NumExpression.h  SubstractExpression.cpp  SubstractExpression.h
function-calls/: CallTable.cpp  CallTable.h  Frame.cpp  Frame.h  FunctionMap.cpp  FunctionMap.h  FunctionTable.cpp  FunctionTable.h  IRFrameTranslator.cpp  IRFrameTranslator.h
function-calls/address/: Address.h  FrameAddress.cpp  FrameAddress.h  RegAddress.cpp  RegAddress.h
grammar/: Program.cpp  Program.h  parser.y  scanner.l
grammar/BaseASTClass/: BaseASTClass.cpp  BaseASTClass.h
grammar/classes/: CallArgumentList.cpp  CallArgumentList.h  Class.cpp  Class.h  ClassBody.cpp  ClassBody.h  ClassField.cpp  ClassField.h  ClassList.cpp  ClassList.h  ClassMain.cpp  ClassMain.h  ClassMethod.cpp  ClassMethod.h  MethodArgumentList.cpp  MethodArgumentList.h
grammar/expressions/: AddExpression.cpp  AddExpression.h  ArrayExpression.cpp  ArrayExpression.h  BinaryExpression.h  DivExpression.cpp  DivExpression.h  EqualExpression.cpp  EqualExpression.h  Expression.h  FuncCallExpression.cpp  FuncCallExpression.h  GreaterExpression.cpp  GreaterExpression.h  GreaterOrEqualExpression.cpp  GreaterOrEqualExpression.h  IdentExpression.cpp  IdentExpression.h  LessExpression.cpp  LessExpression.h  LessOrEqualExpression.cpp  LessOrEqualExpression.h  LogicAndExpression.cpp  LogicAndExpression.h  LogicOrExpression.cpp  LogicOrExpression.h  MethodCallExpression.cpp  MethodCallExpression.h  ModuloExpression.cpp  ModuloExpression.h  MulExpression.cpp  MulExpression.h  NewExpression.cpp  NewExpression.h  NumExpression.cpp  NumExpression.h  SubstractExpression.cpp  SubstractExpression.h  ThisExpression.cpp  ThisExpression.h
grammar/functions/: CallArgumentList.cpp  CallArgumentList.h  FuncArgumentList.cpp  FuncArgumentList.h  Function.cpp  Function.h  FunctionList.cpp  FunctionList.h
grammar/scanner/: scanner.h
grammar/statements/: ArrayAssignment.cpp  ArrayAssignment.h  ArrayDeclaration.cpp  ArrayDeclaration.h  Assignment.cpp  Assignment.h  FuncCallStatement.cpp  FuncCallStatement.h  IfStatement.cpp  IfStatement.h  MethodCallStmt.cpp  MethodCallStmt.h  PrintStatement.cpp  PrintStatement.h  ReadStatement.cpp  ReadStatement.h  ReturnStatement.cpp  ReturnStatement.h  Scope.cpp  Scope.h  Statement.h  StatementList.cpp  StatementList.h  VariableDeclaration.cpp  VariableDeclaration.h  WhileStatement.cpp  WhileStatement.h
include/: Print.h  error_macro.h  forward_decl.h  macros.h  sources.h
irtree/: BinaryOperationType.cpp  BinaryOperationType.h  Block.cpp  Block.h  Trace.cpp  Trace.h
irtree/generators/: Label.cpp  Label.h  Temp.cpp  Temp.h
irtree/nodes/: BaseIRNode.cpp  BaseIRNode.h  ExpressionList.cpp  ExpressionList.h
irtree/tree_wrapper/: ExpressionWrapper.cpp  ExpressionWrapper.h  StatementWrapper.cpp  StatementWrapper.h  SubtreeWrapper.h
irtree/types/: BinOperatorType.cpp  BinOperatorType.h  LogicOperatorType.cpp  LogicOperatorType.h
irtree/visitors/: AsmGenerator.cpp  AsmGenerator.h  EliminateDoubleCalls.cpp  EliminateDoubleCalls.h  EliminateEseq.cpp  EliminateEseq.h  IRUnion.h  (+4 more)
objects/: ArrayObject.cpp  ArrayObject.h  BaseObject.h  BoolObject.cpp  BoolObject.h  ClassObject.cpp  ClassObject.h  ClassType.cpp  ClassType.h  FunctionObject.cpp  FunctionObject.h  FunctionType.cpp  FunctionType.h  Integer.cpp  Integer.h  ObjectsSupport.cpp  PrimitiveObject.cpp  PrimitiveObject.h  PrimitiveType.h  UninitObject.cpp  UninitObject.h
statements/: Assignment.h  DeclareStatement.cpp  DeclareStatement.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  Scope.h  Statement.h  StatementList.cpp  StatementList.h  VariableDeclaration.cpp  VariableDeclaration.h  WhileStatement.cpp
support/: ElementSet.cpp  ElementSet.h
symbol_table/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.cpp  Symbol.h  Table.cpp  Table.h
types/: ArrayType.cpp  ArrayType.h  BaseType.cpp  BaseType.h  BoolType.cpp  BoolType.h  ClassType.cpp  ClassType.h  FunctionType.cpp  FunctionType.h  Integer.cpp  Integer.h  IntegerType.cpp  IntegerType.h  PrimitiveType.cpp  PrimitiveType.h  TypesSupport.cpp  UninitObject.h  UserClassType.cpp  UserClassType.h  VoidType.cpp  VoidType.h
visitors/: BaseVisitor.cpp  BaseVisitor.h  BaseVisitors.cpp  BaseVisitors.h  BuildSymbolLayerTree.cpp  BuildSymbolLayerTree.h  FunctionCallVisitor.cpp  FunctionCallVisitor.h  IRTreeBuildVisitor.cpp  IRTreeBuildVisitor.h  Interprenter.cpp  Interprenter.h  PrintTreeVisitor.cpp  PrintTreeVisitor.h  TemplateBaseVisitor.cpp  TemplateBaseVisitor.h  TypeChecker.cpp  TypeChecker.h  forward_decl.h  sources.h
(+46 files in other folders)
